--- a/youtube-client/.eslintrc.json
+++ b/youtube-client/.eslintrc.json
@@ -16,10 +16,10 @@
         "createDefaultProgram": true
       },
       "extends": [
-//        "eslint:recommended",
-//        "plugin:@typescript-eslint/recommended",
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
         "plugin:@angular-eslint/recommended",
-//        "plugin:@angular-eslint/template/process-inline-templates",
+        "plugin:@angular-eslint/template/process-inline-templates",
         "airbnb-typescript/base"
       ],
       "rules": {
