--- a/youtube-client/tsconfig.json
+++ b/youtube-client/tsconfig.json
@@ -18,6 +18,8 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
+    "noImplicitAny": true,
+    "strictNullChecks": false,
     "lib": [
       "ES2022",
       "dom"
