--- a/youtube-client/.eslintrc.json
+++ b/youtube-client/.eslintrc.json
@@ -11,7 +11,6 @@
       "parserOptions": {
         "project": [
           "tsconfig.*?.json"
-//          "e2e/tsconfig.json"
         ],
         "createDefaultProgram": true
       },
@@ -39,9 +38,15 @@
             "style": "kebab-case"
           }
         ],
-        "@typescript-eslint/comma-dangle": [0],
-        "import/extensions": [0],
-        "import/no-extraneous-dependencies": [0]
+        "@typescript-eslint/comma-dangle": [
+          0
+        ],
+        "import/extensions": [
+          0
+        ],
+        "import/no-extraneous-dependencies": [
+          0
+        ]
       }
     },
     {
@@ -52,6 +57,14 @@
         "plugin:@angular-eslint/template/recommended"
       ],
       "rules": {}
+    },
+    {
+      "files": [
+        "*.ts"
+      ],
+      "extends": [
+        "plugin:@ngrx/recommended"
+      ]
     }
   ]
 }
